--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
     </script>
     <!-- app.jss  -->
-    <script src="assets/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
