--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="input-group mb-3">
                 <input id="search-input-field" type="text" class="form-control" placeholder="Search Your Book"
                     aria-label="Search your book" aria-describedby="search-btn" />
-                <button class="btn btn-info" type="button" onclick="loadBook()">
+                <button class="btn btn-info text-light" type="button" onclick="loadBook()">
                     Search
                 </button>
             </div>
