--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     </style>
 </head>
 
-<body>
+<body class="bg-light">
     <!-- search field start-->
-    <div class="container mt-4">
-        <div class="w-100 mx-auto">
+    <div class="container mt-5">
+        <div class="w-50 mx-auto">
+            <h1 class="mt-5 text-center mb-5 text-info">Search Your Books Name</h1>
             <div class="input-group mb-3">
                 <input id="search-input-field" type="text" class="form-control" placeholder="Search Your Book"
                     aria-label="Search your book" aria-describedby="search-btn" />
